--- a/css/styles.css
+++ b/css/styles.css
@@ -190,20 +190,105 @@ a:hover {
 
 .conditions {
   margin-top: 110px;
+  background-color: #dee9fe;
+}
+.conditions h2 {
+  padding-top: 20px;
+  padding-left: 20px;
+}
+.conditions ul {
+  padding: 20px;
 }
 
-.entry-button {
+.entry {
   margin-top: 50px;
-  background-color: #183061;
-  width: 386px;
-  height: 60px;
-  border-radius: 18px;
 }
-.entry-button h2 {
-  color: #ffffff;
-  font-size: 24px;
+.entry .Form {
+  margin-top: 50px;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 720px;
+}
+.entry .Form-Item {
+  border-top: 1px solid #ddd;
+  padding-top: 24px;
+  padding-bottom: 24px;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.entry .Form-Item-Label {
+  width: 100%;
+  max-width: 248px;
+  letter-spacing: 0.05em;
+  font-weight: bold;
+  font-size: 18px;
+}
+.entry .Form-Item-Label.isMsg {
+  margin-top: 8px;
+  margin-bottom: auto;
+}
+.entry .Form-Item-Label-Required {
+  border-radius: 6px;
+  margin-right: 8px;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  width: 48px;
+  display: inline-block;
   text-align: center;
-  padding-top: 12px;
+  background: #183061;
+  color: #fff;
+  font-size: 14px;
+}
+.entry .Form-Item-Input {
+  border: 1px solid #ddd;
+  border-radius: 6px;
+  margin-left: 40px;
+  padding-left: 1em;
+  padding-right: 1em;
+  height: 48px;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  width: 100%;
+  max-width: 410px;
+  background: #eaedf2;
+  font-size: 18px;
+}
+.entry .Form-Item-Textarea {
+  border: 1px solid #ddd;
+  border-radius: 6px;
+  margin-left: 40px;
+  padding-left: 1em;
+  padding-right: 1em;
+  height: 216px;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  width: 100%;
+  max-width: 410px;
+  background: #eaedf2;
+  font-size: 18px;
+}
+.entry .Form-Btn {
+  border-radius: 6px;
+  margin-top: 32px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  width: 280px;
+  display: block;
+  letter-spacing: 0.05em;
+  background: #183061;
+  color: #fff;
+  font-weight: bold;
+  font-size: 20px;
+  text-align: center;
 }
 
 .footer {
