--- a/css/styles.scss
+++ b/css/styles.scss
@@ -147,6 +147,7 @@ a {
         display: flex;
         justify-content: space-between;
     }
+
 }
 
 .after{
@@ -190,21 +191,107 @@ a {
 
 .conditions{
     margin-top: 110px;
+    background-color: #dee9fe;
+
+    h2{
+        padding-top:20px;
+        padding-left: 20px;
+    }
+
+    ul{
+        padding: 20px;
+    }
 }
 
-.entry-button{
+.entry{
     margin-top: 50px;
-    background-color: #183061;
-    width: 386px;
-    height: 60px;
-    border-radius: 18px;
-    
-    h2{
-        color: #ffffff;
-        font-size: 24px;
+
+    .Form {
+        margin-top: 50px;
+        margin-left: auto;
+        margin-right: auto;
+        max-width: 720px;
+      }
+
+      .Form-Item {
+        border-top: 1px solid #ddd;
+        padding-top: 24px;
+        padding-bottom: 24px;
+        width: 100%;
+        display: flex;
+        align-items: center;
+      }
+
+      .Form-Item-Label {
+        width: 100%;
+        max-width: 248px;
+        letter-spacing: 0.05em;
+        font-weight: bold;
+        font-size: 18px;
+      }
+
+      .Form-Item-Label.isMsg {
+        margin-top: 8px;
+        margin-bottom: auto;
+      }
+
+      .Form-Item-Label-Required {
+        border-radius: 6px;
+        margin-right: 8px;
+        padding-top: 8px;
+        padding-bottom: 8px;
+        width: 48px;
+        display: inline-block;
         text-align: center;
-        padding-top: 12px;
-    }
+        background: #183061;
+        color: #fff;
+        font-size: 14px;
+      }
+
+      .Form-Item-Input {
+        border: 1px solid #ddd;
+        border-radius: 6px;
+        margin-left: 40px;
+        padding-left: 1em;
+        padding-right: 1em;
+        height: 48px;
+        flex: 1;
+        width: 100%;
+        max-width: 410px;
+        background: #eaedf2;
+        font-size: 18px;
+      }
+
+      .Form-Item-Textarea {
+        border: 1px solid #ddd;
+        border-radius: 6px;
+        margin-left: 40px;
+        padding-left: 1em;
+        padding-right: 1em;
+        height: 216px;
+        flex: 1;
+        width: 100%;
+        max-width: 410px;
+        background: #eaedf2;
+        font-size: 18px;
+      }
+
+      .Form-Btn {
+        border-radius: 6px;
+        margin-top: 32px;
+        margin-left: auto;
+        margin-right: auto;
+        padding-top: 20px;
+        padding-bottom: 20px;
+        width: 280px;
+        display: block;
+        letter-spacing: 0.05em;
+        background: #183061;
+        color: #fff;
+        font-weight: bold;
+        font-size: 20px;
+        text-align: center;
+      }
 }
 
 .footer{
