--- a/css/styles.scss
+++ b/css/styles.scss
@@ -15,6 +15,12 @@ body{
 .wrapper{
     width: 980px;
     margin: 0 auto;
+
+    @media(max-width:600px){
+        max-width: 600px;
+        padding: 0 20px;
+        text-align: center;
+      }
 }
 
 h2{
@@ -34,15 +40,21 @@ a {
 /* 共通部分 ここまで*/
 
 .hero{
-    background-image: url('../images/hero.jpg');
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
+    background-image: url('../images/logo.png'),url('../images/hero.jpg');
+    background-repeat: no-repeat,no-repeat;
+    background-position:31px 38px, center;
+    background-size: auto,cover;
     height: 550px;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
+
+    @media(max-width:600px){
+        background-size: cover;
+        background-position: center top;
+        background-repeat: no-repeat;
+      }
 
     p{
         color: #ffffff;
@@ -148,6 +160,23 @@ a {
         justify-content: space-between;
     }
 
+    .courde-button{
+        position: relative;
+
+        span{
+            position: absolute;
+            color: #ffffff;
+            font-weight: bold;
+            font-size: 26px;
+            top:0;
+            left:0;
+        }
+
+        img{
+            width: 100%;
+        }
+    }
+
 }
 
 .after{
@@ -214,7 +243,6 @@ a {
       }
 
       .Form-Item {
-        border-top: 1px solid #ddd;
         padding-top: 24px;
         padding-bottom: 24px;
         width: 100%;
@@ -236,7 +264,7 @@ a {
       }
 
       .Form-Item-Label-Required {
-        border-radius: 6px;
+        border-radius: 8px;
         margin-right: 8px;
         padding-top: 8px;
         padding-bottom: 8px;
@@ -277,7 +305,7 @@ a {
       }
 
       .Form-Btn {
-        border-radius: 6px;
+        border-radius: 10px;
         margin-top: 32px;
         margin-left: auto;
         margin-right: auto;
