--- a/css/styles.scss
+++ b/css/styles.scss
@@ -51,9 +51,8 @@ a {
     flex-direction: column;
 
     @media(max-width:600px){
-        background-size: cover;
-        background-position: center top;
-        background-repeat: no-repeat;
+        background-size: auto, cover;
+        background-position: 31px 38px, center top;
       }
 
     p{
@@ -86,6 +85,7 @@ a {
     margin-top: 40px;
     padding:13px 64px;
     background-color: #dee9fe;
+    max-width: 100%;
 
     p{
         font-size: 16px;
@@ -101,6 +101,11 @@ a {
         background: left top no-repeat;
         background-size: 48px auto;
         font-size: 20px;
+
+        @media(max-width:600px){
+            padding-left: 60px;
+            background-size: 40px auto;
+        }
     }
 
     li:nth-child(1){
@@ -138,10 +143,23 @@ a {
         display: flex;
         justify-content: space-between;
         align-items: center;
+
+        @media(max-width:600px){
+            flex-direction: column;
+        }
     }
 
     li{
         text-align: center;
+
+        @media(max-width:600px){
+            display: flex;
+            align-items: center;
+
+            &.arrow{
+                transform:rotate(90deg);
+            }
+        }
 
         p{
             margin-top: 24px;
