--- a/css/styles.css
+++ b/css/styles.css
@@ -193,19 +193,28 @@ a:hover {
       -ms-flex-pack: justify;
           justify-content: space-between;
 }
-.course .courde-button {
-  position: relative;
+.course .course-button {
+  background-image: url("../images/a_engineer.jpg");
+  width: 250px;
+  height: 200px;
+  text-align: center;
 }
-.course .courde-button span {
-  position: absolute;
+.course .course-button span {
   color: #ffffff;
   font-weight: bold;
   font-size: 26px;
-  top: 0;
-  left: 0;
 }
-.course .courde-button img {
-  width: 100%;
+.course .course-button p {
+  color: #ffffff;
+  font-weight: bold;
+  font-size: 18px;
+  background-color: #183061;
+  width: 200px;
+  height: 51px;
+  border-radius: 17px;
+  margin-top: 54px;
+  margin-left: 24px;
+  padding-top: 12px;
 }
 
 .after {
