--- a/css/styles.scss
+++ b/css/styles.scss
@@ -178,20 +178,29 @@ a {
         justify-content: space-between;
     }
 
-    .courde-button{
-        position: relative;
+    .course-button{
+        background-image: url('../images/a_engineer.jpg');
+        width: 250px;
+        height: 200px;
+        text-align: center;
 
         span{
-            position: absolute;
             color: #ffffff;
             font-weight: bold;
             font-size: 26px;
-            top:0;
-            left:0;
         }
 
-        img{
-            width: 100%;
+        p{
+            color: #ffffff;
+            font-weight: bold;
+            font-size: 18px;
+            background-color: #183061;
+            width: 200px;
+            height: 51px;
+            border-radius:17px;
+            margin-top: 54px;
+            margin-left: 24px;
+            padding-top: 12px;
         }
     }
 
