--- a/css/styles.scss
+++ b/css/styles.scss
@@ -20,7 +20,7 @@ body{
         max-width: 600px;
         padding: 0 20px;
         text-align: center;
-      }
+    }
 }
 
 h2{
@@ -53,7 +53,7 @@ a {
     @media(max-width:600px){
         background-size: auto, cover;
         background-position: 31px 38px, center top;
-      }
+    }
 
     p{
         color: #ffffff;
@@ -175,33 +175,8 @@ a {
         margin-top: 54px;
         padding:0 54px;
         display: flex;
+        flex-wrap: wrap;
         justify-content: space-between;
-    }
-
-    .course-button{
-        background-image: url('../images/a_engineer.jpg');
-        width: 250px;
-        height: 200px;
-        text-align: center;
-
-        span{
-            color: #ffffff;
-            font-weight: bold;
-            font-size: 26px;
-        }
-
-        p{
-            color: #ffffff;
-            font-weight: bold;
-            font-size: 18px;
-            background-color: #183061;
-            width: 200px;
-            height: 51px;
-            border-radius:17px;
-            margin-top: 54px;
-            margin-left: 24px;
-            padding-top: 12px;
-        }
     }
 
 }
