--- a/css/styles.scss
+++ b/css/styles.scss
@@ -146,6 +146,7 @@ a {
 
         @media(max-width:600px){
             flex-direction: column;
+            align-items: flex-start;
         }
     }
 
@@ -158,12 +159,19 @@ a {
 
             &.arrow{
                 transform:rotate(90deg);
+                margin-top: 16px;
+                margin-bottom: 16px;
+                margin-left: 72px;
             }
         }
 
         p{
             margin-top: 24px;
             font-size: 20px;
+
+            @media(max-width:600px){
+                margin-left: 24px;
+            }
         }
     }
 }
@@ -177,6 +185,10 @@ a {
         display: flex;
         flex-wrap: wrap;
         justify-content: space-between;
+    }
+
+    li{
+        max-width: 100%;
     }
 
 }
@@ -237,91 +249,47 @@ a {
 .entry{
     margin-top: 50px;
 
-    .Form {
-        margin-top: 50px;
-        margin-left: auto;
-        margin-right: auto;
-        max-width: 720px;
-      }
+    form div{
+        margin-bottom: 14px;
+    }
 
-      .Form-Item {
-        padding-top: 24px;
-        padding-bottom: 24px;
-        width: 100%;
-        display: flex;
-        align-items: center;
-      }
-
-      .Form-Item-Label {
-        width: 100%;
-        max-width: 248px;
-        letter-spacing: 0.05em;
-        font-weight: bold;
-        font-size: 18px;
-      }
-
-      .Form-Item-Label.isMsg {
-        margin-top: 8px;
-        margin-bottom: auto;
-      }
-
-      .Form-Item-Label-Required {
-        border-radius: 8px;
-        margin-right: 8px;
-        padding-top: 8px;
-        padding-bottom: 8px;
-        width: 48px;
-        display: inline-block;
-        text-align: center;
-        background: #183061;
-        color: #fff;
-        font-size: 14px;
-      }
-
-      .Form-Item-Input {
-        border: 1px solid #ddd;
-        border-radius: 6px;
-        margin-left: 40px;
-        padding-left: 1em;
-        padding-right: 1em;
-        height: 48px;
-        flex: 1;
-        width: 100%;
-        max-width: 410px;
-        background: #eaedf2;
-        font-size: 18px;
-      }
-
-      .Form-Item-Textarea {
-        border: 1px solid #ddd;
-        border-radius: 6px;
-        margin-left: 40px;
-        padding-left: 1em;
-        padding-right: 1em;
-        height: 216px;
-        flex: 1;
-        width: 100%;
-        max-width: 410px;
-        background: #eaedf2;
-        font-size: 18px;
-      }
-
-      .Form-Btn {
-        border-radius: 10px;
-        margin-top: 32px;
-        margin-left: auto;
-        margin-right: auto;
-        padding-top: 20px;
-        padding-bottom: 20px;
-        width: 280px;
+    label{
+        margin-bottom: 10px;
         display: block;
-        letter-spacing: 0.05em;
-        background: #183061;
-        color: #fff;
-        font-weight: bold;
-        font-size: 20px;
-        text-align: center;
-      }
+    }
+
+    input[type="text"],
+    input[type="email"],
+    textarea{
+        border: 1px #555555 solid;
+        border-radius: 5px;
+        padding: 10px;
+    }
+
+    input[type="text"],
+    input[type="email"]{
+        width: 100%;
+        max-width: 240px;
+    }
+
+    textarea{
+        width: 100%;
+        max-width: 480px;
+        height: 6rem;
+    }
+
+    input[type="submit"]{
+        border:none;
+        cursor: pointer;
+        line-height: 1;
+    }
+
+    .button{
+        color: #ffffff;
+        background-color: #183061;
+        border-radius: 5px;
+        padding:18px 32px;
+    }
 }
 
 .footer{
