--- a/css/styles.css
+++ b/css/styles.css
@@ -7,17 +7,16 @@ html {
 body {
   line-height: 1.7;
   color: #555555;
-  font-family: 'Noto Sans JP', sans-serif;
+  font-family: "Noto Sans JP", sans-serif;
 }
 
 .wrapper {
   width: 980px;
   margin: 0 auto;
 }
-
 @media (max-width: 600px) {
   .wrapper {
-    max-width: 600px;
+    width: 100%;
     padding: 0 20px;
     text-align: center;
   }
@@ -32,7 +31,6 @@ a {
   -webkit-transition: all 0.5s 0s ease;
   transition: all 0.5s 0s ease;
 }
-
 a:hover {
   opacity: 0.7;
 }
@@ -40,9 +38,9 @@ a:hover {
 /* 共通部分 ここまで*/
 .hero {
   background-image: url("../images/logo.png"), url("../images/hero.jpg");
-  background-repeat: no-repeat,no-repeat;
+  background-repeat: no-repeat, no-repeat;
   background-position: 31px 38px, center;
-  background-size: auto,cover;
+  background-size: auto, cover;
   height: 550px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -58,30 +56,25 @@ a:hover {
       -ms-flex-direction: column;
           flex-direction: column;
 }
-
 @media (max-width: 600px) {
   .hero {
     background-size: auto, cover;
     background-position: 31px 38px, center top;
   }
 }
-
 .hero p {
   color: #ffffff;
   font-size: 36px;
   font-weight: bold;
 }
-
 .hero p span {
   font-size: 48px;
 }
-
 .hero h1 {
   color: #ffffff;
   font-size: 72px;
   font-weight: bold;
 }
-
 .hero h2 {
   color: #ffffff;
   font-size: 22px;
@@ -98,16 +91,13 @@ a:hover {
   background-color: #dee9fe;
   max-width: 100%;
 }
-
 .program p {
   font-size: 16px;
   text-align: left;
 }
-
 .program ul {
   padding-top: 20px;
 }
-
 .program li {
   padding-left: 90px;
   padding-bottom: 40px;
@@ -115,7 +105,6 @@ a:hover {
   background-size: 48px auto;
   font-size: 20px;
 }
-
 @media (max-width: 600px) {
   .program li {
     padding-left: 60px;
@@ -123,11 +112,9 @@ a:hover {
     text-align: left;
   }
 }
-
 .program li:nth-child(1) {
   background-image: url("../images/point1.jpg");
 }
-
 .program li:nth-child(2) {
   background-image: url("../images/point2.jpg");
 }
@@ -135,28 +122,25 @@ a:hover {
 .recommend {
   margin-top: 103px;
 }
-
 .recommend ul {
   margin-top: 43px;
   padding: 40px;
   background-color: #fffdc0;
   -webkit-column-count: 2;
+     -moz-column-count: 2;
           column-count: 2;
 }
-
 .recommend li {
   background: url("../images/check.png") no-repeat 0 1px;
   padding-left: 50px;
   font-size: 20px;
   text-align: left;
 }
-
 @media (max-width: 600px) {
   .recommend li {
     font-size: 18px;
   }
 }
-
 .recommend li:nth-child(2n-1) {
   padding-bottom: 20px;
 }
@@ -164,7 +148,6 @@ a:hover {
 .project {
   margin-top: 103px;
 }
-
 .project ul {
   margin-top: 43px;
   display: -webkit-box;
@@ -177,7 +160,6 @@ a:hover {
       -ms-flex-align: center;
           align-items: center;
 }
-
 @media (max-width: 600px) {
   .project ul {
     -webkit-box-orient: vertical;
@@ -189,11 +171,9 @@ a:hover {
             align-items: flex-start;
   }
 }
-
 .project li {
   text-align: center;
 }
-
 @media (max-width: 600px) {
   .project li {
     display: -webkit-box;
@@ -211,12 +191,10 @@ a:hover {
     margin-left: 72px;
   }
 }
-
 .project li p {
   margin-top: 24px;
   font-size: 20px;
 }
-
 @media (max-width: 600px) {
   .project li p {
     margin-left: 24px;
@@ -226,7 +204,6 @@ a:hover {
 .course {
   margin-top: 148px;
 }
-
 .course ul {
   margin-top: 54px;
   padding: 0 54px;
@@ -237,16 +214,15 @@ a:hover {
       -ms-flex-pack: justify;
           justify-content: space-between;
 }
-
 @media (max-width: 600px) {
   .course ul {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
+    width: 100%;
   }
 }
-
 @media (max-width: 600px) {
   .course li {
     margin-bottom: 54px;
@@ -256,7 +232,6 @@ a:hover {
 .after {
   margin-top: 115px;
 }
-
 .after-content {
   margin-top: 63px;
   display: -webkit-box;
@@ -266,16 +241,13 @@ a:hover {
       -ms-flex-align: center;
           align-items: center;
 }
-
 .after-content .person {
   text-align: center;
 }
-
 .after-content .person p {
   font-size: 15px;
   margin-top: 24px;
 }
-
 .after-content .comment {
   background-color: #fffdc0;
   margin-left: 40px;
@@ -283,7 +255,6 @@ a:hover {
   position: relative;
   border-radius: 15px;
 }
-
 .after-content .comment:before {
   content: "";
   position: absolute;
@@ -293,7 +264,6 @@ a:hover {
   border: 15px solid transparent;
   border-right: 15px solid #fffdc0;
 }
-
 .after-content p {
   text-align: left;
 }
@@ -302,16 +272,13 @@ a:hover {
   margin-top: 110px;
   background-color: #dee9fe;
 }
-
 .conditions h2 {
   padding-top: 20px;
   padding-left: 20px;
 }
-
 .conditions ul {
   padding: 20px;
 }
-
 .conditions ul li {
   text-align: left;
 }
@@ -319,43 +286,36 @@ a:hover {
 .entry {
   margin-top: 50px;
 }
-
 .entry form div {
   margin-bottom: 14px;
   text-align: left;
 }
-
 .entry form label {
   margin-bottom: 10px;
   display: block;
 }
-
-.entry form input[type="text"],
-.entry form input[type="email"],
+.entry form input[type=text],
+.entry form input[type=email],
 .entry form textarea {
   border: 1px #555555 solid;
   border-radius: 5px;
   padding: 10px;
 }
-
-.entry form input[type="text"],
-.entry form input[type="email"] {
+.entry form input[type=text],
+.entry form input[type=email] {
   width: 100%;
   max-width: 240px;
 }
-
 .entry form textarea {
   width: 100%;
   max-width: 480px;
   height: 6rem;
 }
-
-.entry form input[type="submit"] {
+.entry form input[type=submit] {
   border: none;
   cursor: pointer;
   line-height: 1;
 }
-
 .entry form .button {
   color: #ffffff;
   background-color: #183061;
@@ -369,7 +329,6 @@ a:hover {
   text-align: center;
   height: 93px;
 }
-
 .footer p {
   color: #ffffff;
   font-size: 18px;
