--- a/css/styles.scss
+++ b/css/styles.scss
@@ -17,7 +17,7 @@ body{
     margin: 0 auto;
 
     @media(max-width:600px){
-        max-width: 600px;
+        width: 100%;
         padding: 0 20px;
         text-align: center;
     }
@@ -197,6 +197,7 @@ a {
 
         @media(max-width:600px){
             flex-direction: column;
+            width: 100%;
         }
     }
 
