--- a/css/styles.css
+++ b/css/styles.css
@@ -67,13 +67,28 @@ a:hover {
   font-size: 36px;
   font-weight: bold;
 }
+@media (max-width: 600px) {
+  .hero p {
+    font-size: 24px;
+  }
+}
 .hero p span {
   font-size: 48px;
+}
+@media (max-width: 600px) {
+  .hero p span {
+    font-size: 36px;
+  }
 }
 .hero h1 {
   color: #ffffff;
   font-size: 72px;
   font-weight: bold;
+}
+@media (max-width: 600px) {
+  .hero h1 {
+    font-size: 46px;
+  }
 }
 .hero h2 {
   color: #ffffff;
@@ -84,6 +99,11 @@ a:hover {
   background: -webkit-gradient(linear, left bottom, left top, from(#be8f27), to(#ffc23e));
   background: linear-gradient(to top, #be8f27, #ffc23e);
 }
+@media (max-width: 600px) {
+  .hero h2 {
+    font-size: 13px;
+  }
+}
 
 .program {
   margin-top: 40px;
@@ -91,9 +111,25 @@ a:hover {
   background-color: #dee9fe;
   max-width: 100%;
 }
+@media (max-width: 600px) {
+  .program {
+    padding: 13px 12px;
+  }
+}
+@media (max-width: 600px) {
+  .program h2 {
+    font-size: 24px;
+    text-align: left;
+  }
+}
 .program p {
   font-size: 16px;
   text-align: left;
+}
+@media (max-width: 600px) {
+  .program p {
+    padding-top: 24px;
+  }
 }
 .program ul {
   padding-top: 20px;
@@ -130,6 +166,13 @@ a:hover {
      -moz-column-count: 2;
           column-count: 2;
 }
+@media (max-width: 600px) {
+  .recommend ul {
+    -webkit-column-count: auto;
+       -moz-column-count: auto;
+            column-count: auto;
+  }
+}
 .recommend li {
   background: url("../images/check.png") no-repeat 0 1px;
   padding-left: 50px;
@@ -143,6 +186,16 @@ a:hover {
 }
 .recommend li:nth-child(2n-1) {
   padding-bottom: 20px;
+}
+@media (max-width: 600px) {
+  .recommend li:nth-child(2n-1) {
+    padding-bottom: 0px;
+  }
+}
+@media (max-width: 600px) {
+  .recommend li:not(:nth-child(4)) {
+    padding-bottom: 20px;
+  }
 }
 
 .project {
@@ -198,6 +251,7 @@ a:hover {
 @media (max-width: 600px) {
   .project li p {
     margin-left: 24px;
+    font-size: 16px;
   }
 }
 
@@ -276,6 +330,12 @@ a:hover {
   padding-top: 20px;
   padding-left: 20px;
 }
+@media (max-width: 600px) {
+  .conditions h2 {
+    font-size: 24px;
+    text-align: left;
+  }
+}
 .conditions ul {
   padding: 20px;
 }
@@ -287,6 +347,7 @@ a:hover {
   margin-top: 50px;
 }
 .entry form div {
+  margin-top: 24px;
   margin-bottom: 14px;
   text-align: left;
 }
@@ -333,5 +394,10 @@ a:hover {
   color: #ffffff;
   font-size: 18px;
   padding-top: 33px;
+}
+@media (max-width: 600px) {
+  .footer p {
+    font-size: 12px;
+  }
 }
 /*# sourceMappingURL=styles.css.map */
